hphp/hack/test/typecheck/void_is_type_of_null/option_void2.php.exp
File "option_void2.php", line 3, characters 15-19:
?void is a redundant typehint - just use void (Typing[4241])
