hphp/hack/test/typecheck/void_is_type_of_null/option_void2.php
<?hh // strict

function test(?void $_): void {}
